[project @ 2007-04-22 21:40:51 by rlubke] NEW PACKAGES ----------------------------------------------------- package com.sun.faces.config.configprovider   - the classes here are implementations of com.sun.faces.spi.ConfigurationResourceProvider.     These provide one or more URLs to faces-config resources that will need to be     parsed.
package com.sun.faces.config.processor
  - these classes are the new config/bootstrap code.  Each class handles specifc
    sections of a config file (i.e. one processor for factory elements, another for
    components, etc).

package com.sun.faces.mgbean
  - these classes are the new managed bean facililty.



SECTION: Modified Files
M build-tests.xml
  - commented out the config file test case for now;
    there is no direct translation with the new code

M build.xml
  - exclude the com.sun.commons classes from being
    packaged in jsf-impl.jar.  The runtime code
    has no dependencies on commons now

M src/com/sun/faces/LogStrings.properties
  - new logging messages for old pending i18n comments

M src/com/sun/faces/RIConstants.java
  - removed scope and implicit object names from RIConstants
    and moved them to ELUtils

M src/com/sun/faces/jsf-ri-config.xml
  - added the JavaScript resource PL to the RI config
    resource.  If the option isn't enabled, the PL
    will be ignored by the config code

M src/com/sun/faces/application/ApplicationAssociate.java
  - removed all references to ManagedBeanFactory/Impl and
    the associated methods in ApplicationAssociate that
    dealt with managed beans.
  - Application resource bundles are now represented by
    the ApplicationResourceBundle object

M src/com/sun/faces/application/ConfigNavigationCase.java
  - added a new ctor to ConfigNavigationCase with parameters
    for all relevant information

M src/com/sun/faces/application/WebappLifecycleListener.java
  - We use BeanManager to call the @PreDestroy callbacks on
    managed beans

M src/com/sun/faces/config/ConfigureListener